tests/fixtures/fail/region_undeclared_type.sali
let main(): i32 = {
  let value = 42
  let alias: borrow('a) i32 = borrow value
  alias
}
